# altamira-cli

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  altamira-cli-man.md  pyproject.toml
docs/superpowers/plans/: 2026-05-15-llm-integration.md
myanbio/: altamira.yaml
myanbio/chapters/.trash/chapter-03-20260513-221641/: chapter-03.md  chapter-03.meta.yaml
myanbio/chapters/chapter-01/: chapter-01.history.md  chapter-01.md  chapter-01.meta.yaml
myanbio/chapters/chapter-02/: chapter-02.meta.yaml
myanbio/chapters/chapter-03/: chapter-03.history.md  chapter-03.md  chapter-03.meta.yaml
src/altamira/cli/: app.py  chapter_cmd.py  config_cmd.py  console.py  db_cmd.py  note_cmd.py  outline_cmd.py  publish_cmd.py  repl.py  review_cmd.py  rewrite_cmd.py  skills_cmd.py
src/altamira/config/: loader.py  model.py
src/altamira/domain/: chapter.py  note.py  publish.py
src/altamira/infra/: db.py  scanner.py  watcher.py
src/altamira/publish/templates/: book.html.j2
src/altamira/services/: provider.py  reviewer.py  rewriter.py  system_prompt.py
src/altamira/skills/: loader.py
src/altamira/skills/prompts/: chapter_reviewer.md  chapter_rewriter.md  outline_builder.md  project_init.md  publish_checker.md  source_note_summarizer.md  (+1 more)
src/altamira/tools/: __init__.py  chapter_writer.py
tests/: conftest.py
tests/cli/: test_chapter_note_scan_db.py  test_init_status_config.py  test_publish.py  test_repl.py  test_review_rewrite.py  test_smoke.py  test_top_level.py
tests/services/: test_llm_reviewer.py  test_llm_rewriter.py
tests/tools/: test_chapter_writer.py
